@@ -20,7 +20,9 @@ import static dagger.internal.codegen.binding.AssistedInjectionAnnotations.assis
 import static dagger.internal.codegen.binding.AssistedInjectionAnnotations.isAssistedFactoryType;
 import static dagger.internal.codegen.xprocessing.XElement.isConstructor;
 import static dagger.internal.codegen.xprocessing.XElement.isMethod;
+import static dagger.internal.codegen.xprocessing.XElements.asMethod;
 import static dagger.internal.codegen.xprocessing.XElements.closestEnclosingTypeElement;
+import static dagger.internal.codegen.xprocessing.XElements.getSimpleName;
 
 import dagger.internal.codegen.binding.InjectionAnnotations;
 import dagger.internal.codegen.collect.ImmutableSet;
@@ -33,28 +35,25 @@ import dagger.internal.codegen.xprocessing.XMessager;
 import dagger.internal.codegen.xprocessing.XTypeElement;
 import io.jbock.javapoet.ClassName;
 import jakarta.inject.Inject;
-import java.util.Set;
 
 /**
- * An annotation processor for {@link dagger.assisted.Assisted}-annotated types.
+ * An annotation processor for {@code dagger.assisted.Assisted}-annotated types.
  *
- * <p>This processing step should run after {@link AssistedFactoryProcessingStep}.
+ * <p>This processing step should run after {@code AssistedFactoryProcessingStep}.
  */
 final class AssistedProcessingStep extends TypeCheckingProcessingStep<XExecutableParameterElement> {
   private final InjectionAnnotations injectionAnnotations;
   private final XMessager messager;
 
   @Inject
-  AssistedProcessingStep(
-      InjectionAnnotations injectionAnnotations,
-      XMessager messager) {
+  AssistedProcessingStep(InjectionAnnotations injectionAnnotations, XMessager messager) {
     this.injectionAnnotations = injectionAnnotations;
     this.messager = messager;
   }
 
   @Override
-  public Set<ClassName> annotationClassNames() {
-    return Set.of(TypeNames.ASSISTED);
+  public ImmutableSet<ClassName> annotationClassNames() {
+    return ImmutableSet.of(TypeNames.ASSISTED);
   }
 
   @Override
@@ -69,7 +68,10 @@ final class AssistedProcessingStep extends TypeCheckingProcessingStep<XExecutabl
 
       XExecutableElement enclosingElement = assisted.getEnclosingMethodElement();
       if (!isAssistedInjectConstructor(enclosingElement)
-          && !isAssistedFactoryCreateMethod(enclosingElement)) {
+          && !isAssistedFactoryCreateMethod(enclosingElement)
+          // The generated java stubs for kotlin data classes contain a "copy" method that has
+          // the same parameters (and annotations) as the constructor, so just ignore it.
+          && !isKotlinDataClassCopyMethod(enclosingElement)) {
         report.addError(
             "@Assisted parameters can only be used within an @AssistedInject-annotated "
                 + "constructor.",
@@ -100,5 +102,16 @@ final class AssistedProcessingStep extends TypeCheckingProcessingStep<XExecutabl
           && assistedFactoryMethod(enclosingElement).equals(executableElement);
     }
     return false;
+  }
+
+  private boolean isKotlinDataClassCopyMethod(XExecutableElement executableElement) {
+    // Note: This is a best effort. Technically, we could check the return type and parameters of
+    // the copy method to verify it's the one associated with the constructor, but I'd rather keep
+    // this simple to avoid encoding too many details of kapt's stubs. At worst, we'll be allowing
+    // an @Assisted annotation that has no affect, which is already true for many of Dagger's other
+    // annotations.
+    return isMethod(executableElement)
+        && getSimpleName(asMethod(executableElement)).contentEquals("copy")
+        && closestEnclosingTypeElement(executableElement.getEnclosingElement()).isDataClass();
   }
 }
